# bril-forge

./: Cargo.toml  README.md  rustfmt.toml
src/: ast.rs  common.rs  dom.rs  main.rs  passes.rs
src/passes/: const_prop.rs  dce.rs  example.rs  live.rs  loops.rs  lvn.rs  mod.rs  pointer_analysis.rs
tests/: here.bril  licm.bril  memory_simple.bril
writeup/: week1_writeup.md  week2_writeup.md  week3_writeup.md  week4_writeup.md
