[package]
name = "forge"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
path = "src/common.rs"


[[bin]]
name = "00_no_change"
path = "src/00_no_change/main.rs"

[[bin]]
name = "01_trivial_global_dce"
path = "src/01_trivial_global_dce/main.rs"

[[bin]]
name = "01_local_dce"
path = "src/01_local_dce/main.rs"

[[bin]]
name = "01_local_value_numbering"
path = "src/01_local_value_numbering/main.rs"

